<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>mc.dailycraft</groupId>
    <artifactId>advancedspyinventory-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.1</version>

    <name>AdvancedSpyInventory</name>
    <url>https://dev.bukkit.org/projects/advancedspyinventory</url>
    <description>Open and modify the inventory of entities and players, online or not ! But you can also modify the ender chest of the players</description>

    <modules>
        <module>main</module>
        <module>v1_16_R1</module>
        <module>v1_16_R2</module>
        <module>v1_16_R3</module>
        <module>v1_17_R1</module>
        <module>v1_18_R1</module>
        <module>v1_18_R2</module>
        <module>v1_19_R1</module>
        <module>dist</module>
    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <minecraftVersion>unknown</minecraftVersion>
    </properties>
</project>